# film_chooser

./: .gitignore  Cargo.toml  notes.org
src/: download.rs  get_movies.rs  get_records.rs  main.rs
src/get_movies/: record.rs
src/get_records/: mod.rs  parse_records.rs
src/get_records/files/: common.rs  download_file.rs  local_file.rs  mod.rs
src/record_structs/: actor.rs  cast.rs  crew.rs  dataset_map.rs  episode.rs  film.rs  film_title.rs  mod.rs  person.rs  rating.rs  record.rs  record_error.rs
src/search/: filter_records.rs  mod.rs  record_filter.rs  search_records.rs
