[package]
name = "film_chooser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
flate2 = "1.0.25"
reqwest = "0.11.13"
tempfile = "3.3.0"
tokio = { version = "1.22.0", features = ["full"] }
